Mac OS: Mouse wheel - (NOT magic mouse) doesn't zoom without Ctrl #33681

Closed
opened 2012-12-27 20:58:13 +01:00 by Bartek Skorupa · 16 comments
Member

%%%COMPUTER:
MacBook Pro 2,6 GHz Intel Core i7,

SOFTWARE:
OS X 10.8.2 (12C3012)

MOUSE:
Mouse - Logitech Marathon Mouse M705, wireless,

MOUSE SOFTWARE:
Logitech Control Center ver. 3.4.0.

BLENDER REVISION:
Blender r53345

Issue with mouse wheel. Scrolling mouse wheel does't zoom in/out in any window. In 3d view I have to hold Ctrl and scroll. In node editor even Ctrl-scroll doesn't work. I have to hold down Ctrl and middle click and drag.
It seems that latest changes that were supposed to improve magic mouse or touchpad behavior changed normal mice behavior as well.
Official Blender 2.65a works fine. This strange behavior appeared about mid December 2012.

It seems that this behavior is not desired. I asked about it on bf-committers mailing list:
http://lists.blender.org/pipermail/bf-committers/2012-December/038638.html%%%

%%%COMPUTER: MacBook Pro 2,6 GHz Intel Core i7, SOFTWARE: OS X 10.8.2 (12C3012) MOUSE: Mouse - Logitech Marathon Mouse M705, wireless, MOUSE SOFTWARE: Logitech Control Center ver. 3.4.0. BLENDER REVISION: Blender r53345 Issue with mouse wheel. Scrolling mouse wheel does't zoom in/out in any window. In 3d view I have to hold Ctrl and scroll. In node editor even Ctrl-scroll doesn't work. I have to hold down Ctrl and middle click and drag. It seems that latest changes that were supposed to improve magic mouse or touchpad behavior changed normal mice behavior as well. Official Blender 2.65a works fine. This strange behavior appeared about mid December 2012. It seems that this behavior is not desired. I asked about it on bf-committers mailing list: http://lists.blender.org/pipermail/bf-committers/2012-December/038638.html%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Ah! confirmed on my macbook with 10.8. On iMac with 10.7 (my workstation) its all ok...%%%

%%%Ah! confirmed on my macbook with 10.8. On iMac with 10.7 (my workstation) its all ok...%%%
Member

%%%Fix in svn!

Blender's code was just not handling any mouse-wheel - it was mapping it to the trackpad event.
While fixing trackpad, this mapping went wrong indeed :)%%%

%%%Fix in svn! Blender's code was just not handling any mouse-wheel - it was mapping it to the trackpad event. While fixing trackpad, this mapping went wrong indeed :)%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

%%%Thank you very much%%%

%%%Thank you very much%%%
Author
Member

%%%Unfortunately it seems that the problem hasn't been solved. r53450 - the behavior is different but still not as it should be.
In r53407 the behavior was "almost" fine, but not 100%. Standars mouse wheel didn't zoom in/out at first. When you made any gesture on the trackpad, mouse begun to work properly.
Now in r53450 even making gestures doesn't "restore" normal mouse behavior.
Please re-open the case. Thank you%%%

%%%Unfortunately it seems that the problem hasn't been solved. r53450 - the behavior is different but still not as it should be. In r53407 the behavior was "almost" fine, but not 100%. Standars mouse wheel didn't zoom in/out at first. When you made any gesture on the trackpad, mouse begun to work properly. Now in r53450 even making gestures doesn't "restore" normal mouse behavior. Please re-open the case. Thank you%%%
Member

%%%In 53424 i reverted commit 53412 - which broke mouse wheels entirely.

There is also still a build issue, you have to make sure you set the "mac os x deploy target" to 10.7 minimal, for 10.6 things dont work yet.

I tested it at macbook pro 10.8, connected with wheel mouse and things go just fine. Same for iMac 10.7 with magic mouse, wheel mouse. Several macbook owners reported it works OK, but one person in blenderartists.org doesnt have it work yet.

I think the issue is not that we have bugs here, but to get the build system to work and ensure all different osx versions and devices are working properly.
I would advice to just drop in irc.freenode.net #blendercoders when you have time? Then we check build types, or i can make a test build for you to compare. %%%

%%%In 53424 i reverted commit 53412 - which broke mouse wheels entirely. There is also still a build issue, you have to make sure you set the "mac os x deploy target" to 10.7 minimal, for 10.6 things dont work yet. I tested it at macbook pro 10.8, connected with wheel mouse and things go just fine. Same for iMac 10.7 with magic mouse, wheel mouse. Several macbook owners reported it works OK, but one person in blenderartists.org doesnt have it work yet. I think the issue is not that we have bugs here, but to get the build system to work and ensure all different osx versions and devices are working properly. I would advice to just drop in irc.freenode.net #blendercoders when you have time? Then we check build types, or i can make a test build for you to compare. %%%
Author
Member

%%%Thanks for the info. I've just built r53458 with settings as you specified, i.e.: "Mac OSX deploy targets" to 10.7 minimum and everything works fine.
(Logitech mouse on MacBookPro, 10.8.2)
I checked only the Logitech mouse behavior, not trackpad nor mighty mouse.
Seems that Apple doesn't make your life easier does it? :-)%%%

%%%Thanks for the info. I've just built r53458 with settings as you specified, i.e.: "Mac OSX deploy targets" to 10.7 minimum and everything works fine. (Logitech mouse on MacBookPro, 10.8.2) I checked only the Logitech mouse behavior, not trackpad nor mighty mouse. Seems that Apple doesn't make your life easier does it? :-)%%%
Member

%%%excellent :) try trackpad its very nice smooth :) %%%

%%%excellent :) try trackpad its very nice smooth :) %%%
Author
Member

%%%Tried trackpad and indeed it's very nice. However I think the war will begin between the ones who understand "natural" the apple way and the ones like me for whom natural is exactly opposite :-) The only way of making trackpad movements feel right is to change global mouse settings to unnatural apple's "natural" direction.%%%

%%%Tried trackpad and indeed it's very nice. However I think the war will begin between the ones who understand "natural" the apple way and the ones like me for whom natural is exactly opposite :-) The only way of making trackpad movements feel right is to change global mouse settings to unnatural apple's "natural" direction.%%%
Member

%%%I will make a user setting to map the 'natural' method yourself, so you can invert apple's setting%%%

%%%I will make a user setting to map the 'natural' method yourself, so you can invert apple's setting%%%
Author
Member

%%%Awesome/ You just made my day... No! You just made my year :-) Thank you very much and... Happy New Year!%%%

%%%Awesome/ You just made my day... No! You just made my year :-) Thank you very much and... Happy New Year!%%%

%%%Ton, thanks for fixing this issue with trackpad:
http://projects.blender.org/tracker/?func=detail&atid=498&aid=28915&group_id=9

Trackapad works really really good now. Sadly, I have now the same issue which Bartek did. I'm testing now Blender r53566 on Mac OSX 10.8.2. I can't zoom without CTRL using a mouse (A4Tech). If I understand right you said it is fixed? There is somewhere an option to change mouse wheel's behaviour already? Or it isn't implemented yet?%%%

%%%Ton, thanks for fixing this issue with trackpad: http://projects.blender.org/tracker/?func=detail&atid=498&aid=28915&group_id=9 Trackapad works really really good now. Sadly, I have now the same issue which Bartek did. I'm testing now Blender r53566 on Mac OSX 10.8.2. I can't zoom without CTRL using a mouse (A4Tech). If I understand right you said it is fixed? There is somewhere an option to change mouse wheel's behaviour already? Or it isn't implemented yet?%%%
Member

%%%That fix was for r53604 and later.%%%

%%%That fix was for r53604 and later.%%%

%%%I've just tested r53689. Both touchpad and external mouse work great now. Many thanks for this, Ton! :-)%%%

%%%I've just tested r53689. Both touchpad and external mouse work great now. Many thanks for this, Ton! :-)%%%
Member

%%%And that's what I do this for :) %%%

%%%And that's what I do this for :) %%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33681
No description provided.