intern/ghost/intern/GHOST_SystemCocoa.h
@@ -293,9 +293,6 @@ protected:
 	 */
 	GHOST_TInt32 m_cursorDelta_x, m_cursorDelta_y;
 	
-	/** Multitouch trackpad availability */
-	bool m_hasMultiTouchTrackpad;
-	
 };
 
 #endif // __GHOST_SYSTEMCOCOA_H__
